fix missing icons

--- a/layouts/partials/searchbar.html
+++ b/layouts/partials/searchbar.html
@@ -1,6 +1,6 @@
 <div class="search">
     <input id="searchbar" type="text" placeholder='{{ i18n "searchbarTxt" }}' />
-    <span class="nerdlink" onclick="newSearch();">&#xf002;</span>
+    <span class="nerdlink" onclick="newSearch();">&#x1F50E;&#xFE0E;</span>
 </div>
 <script>
     function newSearch() {
